# HttpsClient

./: CMakeLists.txt  CMakePresets.json  README.md  vcpkg.json
.github/workflows/: build.yml  multi-platform.yml  release.yml
example/: CMakeLists.txt
include/private/: http_session.h  logger.h  ssl_context_builder.h
include/public/: common_types.h  https_client.h
src/: http_session.cpp  https_client.cpp  logger.cpp
src/android/: ssl_context_builder.cpp
src/apple/: ssl_context_builder.cpp
src/default/: ssl_context_builder.cpp
src/windows/: ssl_context_builder.cpp
tests/: CMakeLists.txt  test_proxy.cpp
vcpkg_port/: vcpkg.cmake
vcpkg_port_example/: https-client-config.cmake  portfile.cmake  usage  vcpkg.json
